@@ -2,7 +2,7 @@
 # CHANGES - change log of OTRS
 # Copyright (C) 2001-2008 OTRS AG, http://otrs.org/
 # --
-# $Id: CHANGES,v 1.741 2008-08-21 19:51:43 martin Exp $
+# $Id: CHANGES,v 1.742 2008-08-21 20:02:52 martin Exp $
 # --
 # This software comes with ABSOLUTELY NO WARRANTY. For details, see
 # the enclosed file COPYING for license information (GPL). If you
@@ -10,6 +10,8 @@
 # --
 
 2.3.2 (2008/08/25)
+ - (2008/08/21) Fixed bug# 3216 - CustomerTicketSearch returns links to
+    internal articles.
  - (2008/08/21) Fixed bug# 3219 - Bogus 7bit check in the file cache backend.
  - (2008/08/21) Implemented display of ticket search profiles in Agent
     Interface for immediate access (disabled by default).
